tests/snapshots/generate__minimal_fixture_split_by_bucket.snap
---
source: tests/generate.rs
expression: "roadmark::render(&features, &config, &[])"
---
# Demo Project — Roadmap

<!-- DO NOT EDIT — generated by `roadmark generate`.
     Source of truth: `.roadmap/`.
     See docs/adr for the source-of-truth pipeline. -->

## v0.2.x

| ID | Type | Area | Horizon | Status | Target | Summary |
| --- | --- | --- | --- | --- | --- | --- |
| [F22](#f22) | feature | rules | next | 🚧 | v0.2.x → v0.3 | Parenthesised-list (Oxford done; non-Oxford deferred to v0.3 slice). |
| [F-roadmap-toml-source](#f-roadmap-toml-source) | feature | arch | next | ☐ | — | ROADMAP source-of-truth migrates to `.roadmap/` (gitignored). |

## v0.4

| ID | Type | Area | Horizon | Status | Target | Summary |
| --- | --- | --- | --- | --- | --- | --- |
| [F-llm-plugin](#f-llm-plugin) | feature | adoption | parked | ☐ | — | LLM plugin — out-of-band suggestion stream alongside diagnostics. |

## Details

### <a id="f22"></a>F22

Parenthesised-list (Oxford done; non-Oxford deferred to v0.3 slice).

### <a id="f-roadmap-toml-source"></a>F-roadmap-toml-source

ROADMAP source-of-truth migrates to `.roadmap/` (gitignored).

### <a id="f-llm-plugin"></a>F-llm-plugin

LLM plugin — out-of-band suggestion stream alongside diagnostics.
